[package]
name = "investments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
indicatif = "0.17.8"
itertools = "0.12.1"
plotly = "0.8.4"
polars = { version = "0.37.0", features = ["csv", "lazy"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
statrs = "0.16.0"
toml = "0.8.10"
